modules/eks/security-group.tf
resource "aws_security_group" "worker_nodes" {
    name        = "cluster-sg-${var.environment}"
    description = "Security Group for EKS Cluster"
    vpc_id      = var.vpc_id

    ingress {
        from_port   = 22
        to_port     = 22
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    ingress {
        from_port   = 443
        to_port     = 443
        protocol    = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port   = 0
        to_port     = 0
        protocol    = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }

    tags = merge({Name = "cluster-sg-${var.environment}"}, var.tags)
}
